Create a First CREATE on CRUD with Django.

--- a/contas/templates/contas/listagem.html
+++ b/contas/templates/contas/listagem.html
@@ -13,5 +13,6 @@
          {{ transacao.valor }} - {{ transacao.categoria }}</li>
     {% endfor %}
 </ul>
+    <a href="{% url 'url_nova' %}">Novo</a>
 </body>
 </html>
