--- a/contas/templates/contas/listagem.html
+++ b/contas/templates/contas/listagem.html
@@ -9,8 +9,10 @@
 <h1>Listagem</h1>
 <ul>
     {% for transacao in transacoes %}
-     <li>{{ transacao.descricao }} - {{ transacao.data }} -
-         {{ transacao.valor }} - {{ transacao.categoria }}</li>
+     <li> <a href="{% url 'url_update' transacao.id %}">
+            {{ transacao.descricao }}
+             - {{ transacao.data }} - {{ transacao.valor }}
+             - {{ transacao.categoria }}></a></li>
     {% endfor %}
 </ul>
     <a href="{% url 'url_nova' %}">Novo</a>
