--- a/contas/templates/contas/form.html
+++ b/contas/templates/contas/form.html
@@ -12,6 +12,9 @@
         <button type="submit">
             Salvar
         </button>
+        <a href="{% url 'url_delete' transacao.id %}">
+            Remover
+        </a>
     </form>
 </body>
 </html>
