--- a/contas/templates/contas/form.html
+++ b/contas/templates/contas/form.html
@@ -12,9 +12,11 @@
         <button type="submit">
             Salvar
         </button>
-        <a href="{% url 'url_delete' transacao.id %}">
-            Remover
-        </a>
+        {% if transacao %}
+            <a href="{% url 'url_delete' transacao.id %}">
+                Remover
+            </a>
+        {% endif %}
     </form>
 </body>
 </html>
